--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
-  <h2>Analog Clock</h2>
-  <p>Please hover on the clock to see the current time tooltip.</p>
+  <h2>Anrloge analogique</h2>
+  <p>Survolez avec la souris pour afficher le tooltip</p>
 
   <app-analog-clock></app-analog-clock>
 </div>
