--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>Anrloge analogique</h2>
+  <h2>Horloge analogique</h2>
   <p>Survolez avec la souris pour afficher le tooltip</p>
 
   <app-analog-clock></app-analog-clock>
